force-app/main/default/objects/FieloEE__Reward__c/FieloEE__Reward__c.object-meta.xml
<CustomObject>
    <description>Rewards that members can redeem. Rewards are shown in a catalog that can be browsed in the members’ portal.</description>
    <label>Reward</label>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>