force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__AvailableDays__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AvailableDays__c</fullName>
    <description>Number of days during which the voucher will be valid. If left blank, the voucher will not expire.</description>
    <inlineHelpText>Specify how many days the voucher will be usable since the redemption is created. Leave it blank if you do not want an expiration date.</inlineHelpText>
    <label>Reward Voucher Validity (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>