force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The category to which the reward belongs.</description>
    <inlineHelpText>Choose the category from the list where this reward will appear on the member portal.</inlineHelpText>
    <label>Category</label>
    <referenceTo>FieloEE__Category__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Prizes</relationshipName>
    <type>Lookup</type>
</CustomField>