force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <description>A description of this reward to be showed in the members&#39; portal.</description>
    <inlineHelpText>Enter a description of the product to be shown in the front end.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>