force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__HasSegments__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__HasSegments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multi Segment</label>
    <type>Checkbox</type>
</CustomField>