force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Image__c</fullName>
    <formula>"&lt;img src=\" servlet/servlet.FileDownload?file=" &amp; FieloEE__AttachmentId__c &amp; "\"/&gt;"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>