force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Instructions__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Instructions__c</fullName>
    <description>Instructions to redeem this reward that will appear in the voucher. These instructions overrule the instructions in Settings.</description>
    <inlineHelpText>Define the instructions that will be printed in the voucher for redeeming this reward. These instructions overrule the instructions in Settings.</inlineHelpText>
    <label>Specific Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>