force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__InstructionsRichText__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__InstructionsRichText__c</fullName>
    <description>Detailed instructions for redeeming this reward.</description>
    <label>Instructions RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>