force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Intangible__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Intangible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated Field</description>
    <inlineHelpText>Click here to set an unlimited quantity for this reward.</inlineHelpText>
    <label>zz_deprecated_Unlimited Quantity?</label>
    <type>Checkbox</type>
</CustomField>