force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__isInstantReward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__isInstantReward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will make this reward redeemable for a specific action, instead of points.</description>
    <inlineHelpText>Check this option if you want to give this reward for free (for no points) when the member does a special action.</inlineHelpText>
    <label>Instant Reward</label>
    <type>Checkbox</type>
</CustomField>