force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__PointsCant__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointsCant__c</fullName>
    <description>Number of points to redeem this reward.</description>
    <inlineHelpText>Specify the number of points necessary to redeem this reward.</inlineHelpText>
    <label>Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>