force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Price__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Price__c</fullName>
    <description>The cost of purchasing this reward for your company.</description>
    <inlineHelpText>Specify the cost of purchase of this reward. This will be used only for reporting purposes.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>