force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__QuantityAvailable__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityAvailable__c</fullName>
    <description>Total stock.</description>
    <inlineHelpText>The available quantity of the reward.</inlineHelpText>
    <label>Quantity Available</label>
    <summaryFilterItems>
        <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FieloEE__RewardItem__c.FieloEE__IsCondenser__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>