force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__QuantityComments__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityComments__c</fullName>
    <label>Quantity Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>