force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__QuantityFieloPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityFieloPoints__c</fullName>
    <description>Deprecated Field</description>
    <inlineHelpText>Specify the value in Mall Points to redeem this reward.</inlineHelpText>
    <label>zz_deprecated_Mall Point Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>