force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__QuantityLikes__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityLikes__c</fullName>
    <label>Quantity Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>