force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__QuantityPending__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityPending__c</fullName>
    <description>Deprecated Field</description>
    <inlineHelpText>Click here to set an unlimited quantity for this reward.</inlineHelpText>
    <label>zz_deprecated_Quantity Pending</label>
    <summaryFilterItems>
        <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>