force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__QuantityRedeem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityRedeem__c</fullName>
    <description>Total redeemed of the product</description>
    <inlineHelpText>The quantity of rewards that has been redeemed.</inlineHelpText>
    <label>Quantity Redeem</label>
    <summaryFilterItems>
        <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
        <operation>equals</operation>
        <value>Unavailable</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>