force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__RedemptionRule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated Field</description>
    <inlineHelpText>Specify the rule that will apply toward the redemption of the prize.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Prizes</relationshipName>
    <type>Lookup</type>
</CustomField>