force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__RewardFacilitator__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RewardFacilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The provider of this reward.</description>
    <inlineHelpText>Specify the provider of this reward. Leave it blank if this reward has not provider.</inlineHelpText>
    <label>Reward Facilitator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>