force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__Stock__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of units of this reward.</description>
    <label>Items Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>