force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__StockWarning__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StockWarning__c</fullName>
    <description>Stock quantity of this reward that will trigger an email warning you that the stock is low.</description>
    <inlineHelpText>Specify the stock limit alert. This will be used to send an alert email.</inlineHelpText>
    <label>Stock Warning</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>