force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__UniqueVoucher__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__UniqueVoucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will create a voucher with two or more items of this reward.</description>
    <inlineHelpText>Check this option if you want to create a voucher in a redemption that have two or more items of this reward. This voucher will show the quantity field.</inlineHelpText>
    <label>Unique Voucher</label>
    <type>Checkbox</type>
</CustomField>