force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__VotesQuantity__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__VotesQuantity__c</fullName>
    <description>Rate of the product</description>
    <inlineHelpText>This is the quantity of &#39;likes&#39; the reward received by members.</inlineHelpText>
    <label>Quantity Votes</label>
    <summaryForeignKey>FieloEE__RewardLike__c.FieloEE__Reward__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>