force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__VoucherCreationMode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__VoucherCreationMode__c</fullName>
    <description>If voucher numbers are from a provider, vouchers are Preload, if the system creates them, they are Random</description>
    <inlineHelpText>Determine whether the codes to get points will be preloaded or automatic</inlineHelpText>
    <label>Stock Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Controlled By Quantity</fullName>
                <default>true</default>
                <label>Controlled By Quantity</label>
            </value>
            <value>
                <fullName>Controlled By Item</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>