force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__Available_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Available_Days</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__AvailableDays__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__AvailableDays__c</errorDisplayField>
    <errorMessage>value must be positive</errorMessage>
</ValidationRule>