force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__ChangeStockMode.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ChangeStockMode</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL(PRIORVALUE(FieloEE__VoucherCreationMode__c), &#39;Controlled By Quantity&#39;) &amp;&amp; (ISPICKVAL(FieloEE__VoucherCreationMode__c, &#39;Unlimited&#39;) || ISPICKVAL(FieloEE__VoucherCreationMode__c, &#39;Controlled By Item&#39;))) ||
(ISPICKVAL(PRIORVALUE(FieloEE__VoucherCreationMode__c), &#39;Controlled By Item&#39;) &amp;&amp; (ISPICKVAL(FieloEE__VoucherCreationMode__c, &#39;Unlimited&#39;) ||
ISPICKVAL(FieloEE__VoucherCreationMode__c, &#39;Controlled By Quantity&#39;)))) &amp;&amp;
FieloEE__Stock__c &gt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__VoucherCreationMode__c</errorDisplayField>
    <errorMessage>This operation is allowed when stock is equal to zero</errorMessage>
</ValidationRule>