force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__Points_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Points_Required</fullName>
    <active>true</active>
    <description>Validation to set allways a point value to the reward</description>
    <errorConditionFormula>ISNULL( FieloEE__PointsCant__c )</errorConditionFormula>
    <errorDisplayField>FieloEE__PointsCant__c</errorDisplayField>
    <errorMessage>The points of the reward are mandatory</errorMessage>
</ValidationRule>