force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__Price_Possitive.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Price_Possitive</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__Price__c</errorDisplayField>
    <errorMessage>value must be positive</errorMessage>
</ValidationRule>