force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__Quantity_Points_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Quantity_Points_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__PointsCant__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__PointsCant__c</errorDisplayField>
    <errorMessage>value must be positive</errorMessage>
</ValidationRule>