force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__Unlimited.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Unlimited</fullName>
    <active>false</active>
    <errorConditionFormula>FieloEE__Intangible__c = TRUE &amp;&amp;  ISPICKVAL( FieloEE__VoucherCreationMode__c , &#39;Preload&#39; )</errorConditionFormula>
    <errorMessage>A reward cannot be unlimited and preload at the same time</errorMessage>
</ValidationRule>