force-app/main/default/objects/FieloEE__Reward__c/listViews/FieloEE__All_Rewards.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Rewards</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Category__c</columns>
    <columns>FieloEE__Description__c</columns>
    <columns>FieloEE__PointsCant__c</columns>
    <columns>FieloEE__VoucherCreationMode__c</columns>
    <columns>FieloEE__Stock__c</columns>
    <columns>FieloEE__ExpirationDate__c</columns>
    <columns>FieloEE__isInstantReward__c</columns>
    <columns>FieloEE__Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rewards</label>
    <language>en_US</language>
</ListView>