force-app/main/default/objects/FieloEE__Reward__c/listViews/FieloEE__AvailableRewards.listView-meta.xml
<ListView>
    <fullName>FieloEE__AvailableRewards</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Category__c</columns>
    <columns>FieloEE__Description__c</columns>
    <columns>FieloEE__PointsCant__c</columns>
    <columns>FieloEE__ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloEE__Stock__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Available Rewards</label>
    <language>en_US</language>
</ListView>